refresh of todos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="background"></div>
     <div class="wrapper">
       <header>
-        <h1>QtPass <small>0.9.1</small></h1>
+        <h1>QtPass <small>0.9.2</small></h1>
         <p>QtPass is a multi-platform GUI for <a href="http://www.passwordstore.org/">pass</a>, the standard unix password manager.</p>
 
         <p class="view">
@@ -102,14 +102,9 @@
         <h2><a id="planned-features" class="anchor" href="#planned-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Planned features</h2>
 
           <ul>
-          <li>Re-encryption after users-change (optional ofcourse)</li>
-          <li><del>Showing path in Add and Edit screen (currently sometimes confusing where I'm adding this password)</del></li>
-          <li><del>Right click handlers for file/folder and content</del></li>
-          <li><del>First use wizards to set up password-store (and decryption key, currently always the gpg default key)</del></li>
-          <li><del>Profiles (to allow use of multiple password stores and decryption keys) with dropdown in main screen</del></li>
-          <li><del>Password generation with options for what kind you'd like</del></li>
           <li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
-          <li><del>Colour coding or disabling of people you can't encrypt for (trust settings) in User management</del></li>
+          <li>PLugins baed on key, format is same as password file</li>
+          <li>Re-encryption after users-change (optional ofcourse)</li>
           <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
           <li>WebDAV (configuration) support</li>
           <li>Optional table view of decrypted folder contents</li>
