--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
           <ul>
           <li>Templates (username, url etc) in Add / Edit screen (configurable templates)</li>
-          <li>PLugins baed on key, format is same as password file</li>
+          <li>Plugins baed on key, format is same as password file</li>
           <li>Re-encryption after users-change (optional ofcourse)</li>
           <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
           <li>WebDAV (configuration) support</li>
