--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <ul>
           <li>Re-encryption after users-change (optional ofcourse)</li>
-          <li>Plugins baed on key, format is same as password file</li>
+          <li>Plugins based on key, format is same as password file</li>
           <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
           <li>WebDAV (configuration) support</li>
           <li>Optional table view of decrypted folder contents</li>
