--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
         <h2><a id="planned-features" class="anchor" href="#planned-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Planned features</h2>
 
         <ul>
-          <li>Re-encryption after users-change (optional ofcourse)</li>
-          <li>Plugins based on key, format is same as password file</li>
-          <li>Colour coding folders (possibly disabling folders you can't decrypt)</li>
-          <li>WebDAV (configuration) support</li>
-          <li>Optional table view of decrypted folder contents</li>
+          <li>Re-encryption after users-change (optional ofcourse).</li>
+          <li>Plugins based on key, format is same as password file.</li>
+          <li>Colour coding folders (possibly disabling folders you can't decrypt).</li>
+          <li>WebDAV (configuration) support.</li>
+          <li>Optional table view of decrypted folder contents.</li>
           <li>Opening of (basic auth) urls in default browser? Possibly with helper plugin for filling out forms?</li>
-          <li>Some other form of remote storage that allows for accountability / auditing (web API to retreive the .gpg files?)</li>
+          <li>Some other form of remote storage that allows for accountability / auditing (web API to retreive the .gpg files)?</li>
         </ul>
 
         <h2><a id="known-issues" class="anchor" href="#known-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Known issues</h2>
