--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <h2><a id="known-issues" class="anchor" href="#known-issues" aria-hidden="true"><span class="octicon octicon-link"></span></a>Known issues</h2>
 
         <ul>
-          <li>Filtering (searching) breaks the tree/model sometimes </li>
-          <li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN</li>
+          <li>Filtering (searching) breaks the tree/model sometimes.</li>
+          <li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN.</li>
         </ul>
 
         <h2><a id="user-content-faq" class="anchor" href="#faq" aria-hidden="true"><span class="octicon octicon-link"></span></a>FAQ</h2>
