some minor fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>QtPass multi-platform GUI for pass, the standard unix password manager</title>
-
+    <meta name="description" content="QtPass is a GUI version of pass, the standard unix password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -175,7 +175,7 @@ fi
         
         <ul>
         <li>Create an <a href="https://github.com/IJHack/qtpass/">issue</a> issues on github.</li>
-        <li>Send an email to <a href="/IJHack/qtpass/blob/master/help@qtpass.org">help@qtpass.org</a></li>
+        <li>Send an email to <a href="mailto:help@qtpass.org">help@qtpass.org</a></li>
         </ul>
         
         <p>
@@ -189,7 +189,7 @@ fi
       <footer>
         <p>This project is maintained by <a href="https://github.com/IJHack">IJHack</a></p>
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      	<a href="https://travis-ci.org/IJHack/qtpass"><img src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" style="max-width:100%;"></a>
+      	<a href="https://travis-ci.org/IJHack/qtpass"><img src="https://travis-ci.org/IJHack/qtpass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/qtpass.svg?branch=master"></a>
       	<a href="https://scan.coverity.com/projects/5266"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/5266/badge.svg"/></a>
       </footer>
     </div>
