some more social shizzles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>QtPass multi-platform GUI for pass, the standard unix password manager</title>
-    <meta name="description" content="QtPass is a GUI version of pass, the standard unix password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <title>QtPass GUI for pass, the standard UNIX password manager</title>
+    <meta name="description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -28,6 +28,17 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="./images/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="QtPass GUI for pass, the standard UNIX password manager">
+    <meta property="og:site_name" content="QtPass">
+    <meta property="og:url" content="https://qtpass.org/">
+    <meta property="og:description" content="tPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <meta property="fb:app_id" content="">
+    <meta property="og:type" content="product">
+    <meta name="twitter:card" content="product">
+    <meta name="twitter:site" content="@annejanbrouwer">
+    <meta name="twitter:title" content="QtPass GUI for pass, the standard UNIX password manager">
+    <meta name="twitter:description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
   </head>
   <body>
     <div class="background"></div>
