--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -39,6 +39,7 @@
     <meta name="twitter:title" content="QtPass GUI for pass, the standard UNIX password manager">
     <meta name="twitter:description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
+    <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
   </head>
   <body>
     <div class="background"></div>
