Compatibility and AppVeyor

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@ fi
         <p>This project is maintained by <a href="https://github.com/IJHack">IJHack</a></p>
         <p><small>Based on a theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       	<a href="https://travis-ci.org/IJHack/qtpass"><img src="https://api.travis-ci.org/IJHack/qtpass.svg?branch=master" alt="Build Status" data-canonical-src="https://travis-ci.org/IJHack/qtpass.svg?branch=master"></a>
+        <a href="https://ci.appveyor.com/project/annejan/qtpass"><img src="https://ci.appveyor.com/api/projects/status/9rjnj72rdir7u9eg/branch/master?svg=true" alt="AppVeyor Build Status"/></a>  
       	<a href="https://scan.coverity.com/projects/5266"><img alt="Coverity Scan Build Status" src="https://scan.coverity.com/projects/5266/badge.svg"/></a>
       </footer>
     </div>
