Too lazy todo all

--- a/index.html
+++ b/index.html
@@ -87,11 +87,17 @@
         <h3><a id="downloads-linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h3>
 
         <h4>Arch</h4>
-        Latest <a href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a href="https://aur.archlinux.org/packages/qtpass-git">git</a> via <a href="https://aur.archlinux.org/">aur</a>.
+        Latest <a href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a href="https://aur.archlinux.org/">aur</a>.
         <pre><code>packer qtpass</code></pre><pre><code>yaourt -S qtpass</code></pre>
+        <h4>OpenSUSE</h4>
+        Via <a href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> ofcourse.
+	<pre><code>yum install qtpass</code></pre>
         <h4>Debian</h4>
         In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a> and <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a>.
         <pre><code>apt-get install qtpass</code></pre>
+	<h4>Gentoo</h4>
+	Source build <a href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a>.
+	<pre><code>emerge -atv qtpass</code></pre>
 
         <h4>TODO more</h4>
 
