Add caskroom URL

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <p>Latest stable on the <a href="https://github.com/IJHack/qtpass/releases">releases page</a>, latest build via <a href="https://annejan.com/media/qtpass.php">AnneJan</a>.</p>
 
-        Via <a href="caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
+        Via <a href="http://caskroom.io">Homebrew Cask</a> <pre><code>brew cask install qtpass</code></pre>
 
         <h3><a id="user-content-dependencies" class="anchor" href="#dependencies" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dependencies</h3>
         <ul>
