--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
         <h4>OpenSUSE</h4>
         Via <a href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> ofcourse.
 	<pre><code>yum install qtpass</code></pre>
-        <h4>Debian</h4>
-        In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a> and <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a>.
+        <h4>Debian &amp; Ubuntu</h4>
+        In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a href="http://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
         <pre><code>apt-get install qtpass</code></pre>
 	<h4>Gentoo</h4>
 	Source build <a href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a>.
 	<pre><code>emerge -atv qtpass</code></pre>
+	<h4>FreeBSD</h4>
+	<pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make &amp;&amp; make install clean</code></pre>
 
         <h4>TODO more</h4>
 
