--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <h4>Arch</h4>
         Latest <a href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a href="https://aur.archlinux.org/">aur</a>.
         <pre><code>packer qtpass</code></pre><pre><code>yaourt -S qtpass</code></pre>
-        <h4>OpenSUSE</h4>
-        Via <a href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> ofcourse.
+        <h4>OpenSUSE &amp; Fedora</h4>
+        Via <a href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> and <a href="https://admin.fedoraproject.org/pkgdb/package/rpms/qtpass/">Fedora</a> package db.
 	<pre><code>yum install qtpass</code></pre>
         <h4>Debian &amp; Ubuntu</h4>
         In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a href="http://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
