--- a/index.html
+++ b/index.html
@@ -88,16 +88,22 @@
 
         <h4>Arch</h4>
         Latest <a href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a href="https://aur.archlinux.org/">aur</a>.
-        <pre><code>packer qtpass</code></pre><pre><code>yaourt -S qtpass</code></pre>
+        <pre><code>packer qtpass</code></pre>
+	<pre><code>yaourt -S qtpass</code></pre>
+
         <h4>OpenSUSE &amp; Fedora</h4>
         Via <a href="https://build.opensuse.org/package/repositories/security/QtPass">OBS</a> and <a href="https://admin.fedoraproject.org/pkgdb/package/rpms/qtpass/">Fedora</a> package db.
 	<pre><code>yum install qtpass</code></pre>
+	<pre><code>dnf install qtpass</code></pre>
+
         <h4>Debian &amp; Ubuntu</h4>
         In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a href="http://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
         <pre><code>apt-get install qtpass</code></pre>
+
 	<h4>Gentoo</h4>
 	Source build <a href="https://packages.gentoo.org/packages/app-admin/qtpass">package</a>.
 	<pre><code>emerge -atv qtpass</code></pre>
+
 	<h4>FreeBSD</h4>
 	<pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make &amp;&amp; make install clean</code></pre>
 
