--- a/index.html
+++ b/index.html
@@ -230,8 +230,14 @@ fi
             <li>Yes, check <a href="http://www.passwordstore.org/#migration">passwordstore.org/#migration</a> for more info.</li>
         </ul>
 
-        <h3><a id="user-content-where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
+        <h3><a id="user-content-current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
 
+        <ul>
+            <li>Read the current <a href="https://github.com/IJHack/qtpass/blob/master/doc/FAQ.md">QtPass FAQ</a>.</li>
+        </ul>
+
+        <h3><a id="user-content-where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
+        
         <ul>
             <li>Create an <a href="https://github.com/IJHack/qtpass/">issue</a> issues on github.</li>
             <li>Send an email to <a href="mailto:help@qtpass.org">help@qtpass.org</a></li>
