--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<pre><code>yum install qtpass</code></pre>
 	<pre><code>dnf install qtpass</code></pre>
 
-        <h4>Debian &amp; Ubuntu</h4>
+        <h4>Debian, Ubuntu and derivates like Kali &amp; Raspbian</h4>
         In <a href="https://packages.debian.org/testing/utils/qtpass">testing</a>, <a href="https://packages.debian.org/unstable/utils/qtpass">sid</a> and <a href="http://packages.ubuntu.com/xenial/utils/qtpass">xenial</a>.
         <pre><code>apt-get install qtpass</code></pre>
 
