--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
             <li>On Mac OS X only the gpgtools MacGPG2 version works with passphrase or PIN.</li>
         </ul>
 
-        <h2><a id="user-content-faq" class="anchor" href="#faq" aria-hidden="true"><span class="octicon octicon-link"></span></a>FAQ</h2>
+        <h2><a id="faq" class="anchor" href="#faq" aria-hidden="true"><span class="octicon octicon-link"></span></a>FAQ</h2>
 
         <h3><a id="user-content-cant-save-a-password" class="anchor" href="#cant-save-a-password" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can't save a password</h3>
 
