pkg install qtpass

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 	<pre><code>emerge -atv qtpass</code></pre>
 
 	<h4>FreeBSD</h4>
+	<pre><code>pkg install qtpass</code></pre>
 	<pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make &amp;&amp; make install clean</code></pre>
 
         <h4>TODO more</h4>
