--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 	<h4>FreeBSD</h4>
 	<pre><code>pkg install qtpass</code></pre>
-	<pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make &amp;&amp; make install clean</code></pre>
+	<pre><code>cd /usr/ports/sysutils/qtpass/ &amp;&amp; make install clean</code></pre>
 
         <h4>TODO more</h4>
 
