--- a/index.html
+++ b/index.html
@@ -40,6 +40,23 @@
     <meta name="twitter:description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
     <meta name="twitter:image:src" content="https://qtpass.org/images/icon.svg">
     <link href="https://plus.google.com/u/0/+AnneJanBrouwer" rel="publisher" />
+<script type="application/ld+json">
+{
+  "@context" : "http://schema.org",
+  "@type" : "SoftwareApplication",
+  "name" : "QtPass",
+  "url" : "https://qtpass.org/",
+  "author" : {
+    "@type" : "Organisation",
+    "name" : "IJHack"
+  },
+  "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
+  "operatingSystem" : "Linux, BSD, OS X and Windows",
+  "requirements" : "pass or git and gpg2",
+  "screenshot" : "https://qtpass.org/images/qtpass.png",
+  "softwareVersion" : "1.1"
+}
+</script>
 </head>
 <body>
 <div class="background"></div>
