--- a/index.html
+++ b/index.html
@@ -47,14 +47,25 @@
   "name" : "QtPass",
   "url" : "https://qtpass.org/",
   "author" : {
-    "@type" : "Organisation",
+    "@type" : "Organization",
     "name" : "IJHack"
   },
   "downloadUrl" : "https://github.com/IJHack/qtpass/releases",
   "operatingSystem" : "Linux, BSD, OS X and Windows",
   "requirements" : "pass or git and gpg2",
   "screenshot" : "https://qtpass.org/images/qtpass.png",
-  "softwareVersion" : "1.1"
+  "softwareVersion" : "1.1",
+  "applicationCategory" : "Security, Utility",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "EUR"
+  },
+  "aggregateRating" : {
+    "@type": "AggregateRating",
+    "ratingValue": "4.7",
+    "reviewCount": "8"
+  }
 }
 </script>
 </head>
