--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </ul>
 
         <div class="screenshots">
-            <img id="qtpass" src="images/qtpass.png" alt="QtPass beta" />
-            <img id="config" class="hidden" src="images/config.png" alt="QtPass configuration" />
+            <img id="qtpass" src="images/qtpass.png" alt="QtPass MainWindow" />
+            <img id="config" class="hidden" src="images/config.png" alt="QtPass Configuration" />
         </div>
 
     </header>
