--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <meta property="og:title" content="QtPass GUI for pass, the standard UNIX password manager">
     <meta property="og:site_name" content="QtPass">
     <meta property="og:url" content="https://qtpass.org/">
-    <meta property="og:description" content="tPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
+    <meta property="og:image" content="https://qtpass.org/images/qtpass.png">
+    <meta property="og:description" content="QtPass is a GUI version of pass, the standard UNIX password manager for Windows, Mac, Linux and BSD. Using optional smartcard or YubiKey protection.">
     <meta property="fb:app_id" content="">
     <meta property="og:type" content="product">
     <meta name="twitter:card" content="product">
