Minor updates and internal links

--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
             <li>Copying password to clipboard</li>
             <li>Configurable shoulder surfing protection options</li>
             <li>Experimental WebDAV support </li>
+            <li><a href="/docs/md_README.html">Much more</a></li>
         </ul>
         <h2><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
-        <h3><a id="downloads-linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h3>
+        <h3><a id="linux" class="anchor" href="#linux" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Linux</h3>
 
         <h4>Arch</h4>
         Latest <a href="https://aur.archlinux.org/packages/qtpass/">stable</a> and <a href="https://aur.archlinux.org/packages/qtpass-git">git</a> on <a href="https://aur.archlinux.org/">aur</a>.
@@ -202,12 +203,11 @@ qmake &amp;&amp; make &amp;&amp; macdeployqt QtPass.app</code></pre>
         <h2><a id="planned-features" class="anchor" href="#planned-features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Planned features</h2>
 
         <ul>
-            <li>Re-encryption after users-change (optional ofcourse).</li>
             <li>Plugins based on key, format is same as password file.</li>
             <li>Colour coding folders (possibly disabling folders you can't decrypt).</li>
-            <li>WebDAV (configuration) support.</li>
             <li>Optional table view of decrypted folder contents.</li>
             <li>Opening of (basic auth) urls in default browser? Possibly with helper plugin for filling out forms?</li>
+            <li>WebDAV (configuration) support.</li>
             <li>Some other form of remote storage that allows for accountability / auditing (web API to retreive the .gpg files)?</li>
         </ul>
 
@@ -262,7 +262,7 @@ fi
         <h3><a id="user-content-current-FAQ" class="anchor" href="#current-FAQ" aria-hidden="true"><span class="octicon octicon-link"></span></a>Are there more frequently asked questions?</h3>
 
         <ul>
-            <li>Read the current <a href="https://github.com/IJHack/qtpass/blob/master/docs/FAQ.md">QtPass FAQ</a>.</li>
+            <li>Read the current <a href="/docs/md_FAQ.html">QtPass FAQ</a>.</li>
         </ul>
 
         <h3><a id="user-content-where-can-i-ask-for-help" class="anchor" href="#where-can-i-ask-for-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Where can I ask for help?</h3>
